// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceGroupPassFail render 1`] = `
<DocumentFragment>
  <div
    class="choiceGroupContainer"
  >
    <mock-styledchoicegroup
      islabelvisible="false"
      options="[object Object],[object Object],[object Object]"
      selectedkey="unknown"
      styles="[object Object]"
    />
    <div
      class="secondaryControlsWrapper"
    >
      <mock-customizediconbutton
        aria-label="add"
        iconprops="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to FAIL 1`] = `
<DocumentFragment>
  <div
    class="choiceGroupContainer"
  >
    <mock-styledchoicegroup
      islabelvisible="false"
      options="[object Object],[object Object],[object Object]"
      selectedkey="fail"
      styles="[object Object]"
    />
    <div
      class="secondaryControlsWrapper"
    >
      <mock-customizediconbutton
        arialabel="undo"
        iconprops="[object Object]"
      />
      <mock-customizediconbutton
        aria-label="add"
        iconprops="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to FAIL: CustomizedIconButton props 1`] = `
{
  "ariaLabel": "undo",
  "iconProps": {
    "iconName": "undo",
  },
  "onClick": [Function],
}
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to FAIL: StyledChoiceGroup props 1`] = `
{
  "componentRef": [Function],
  "data-automation-id": undefined,
  "isLabelVisible": false,
  "onChange": [Function],
  "options": [
    {
      "ariaLabel": "Pass",
      "key": "pass",
      "onRenderLabel": [Function],
      "styles": {
        "field": undefined,
        "root": "radioButtonOption",
      },
      "text": "Pass",
    },
    {
      "ariaLabel": "Fail",
      "key": "fail",
      "onRenderLabel": [Function],
      "styles": {
        "field": undefined,
        "root": "radioButtonOption",
      },
      "text": "Fail",
    },
    {
      "ariaLabel": "unknown",
      "key": "unknown",
      "onRenderLabel": [Function],
      "styles": {
        "field": undefined,
        "root": "radioButtonOption",
      },
      "text": "unknown",
    },
  ],
  "selectedKey": "fail",
  "styles": {
    "flexContainer": "radioButtonGroup",
  },
}
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to PASS 1`] = `
<DocumentFragment>
  <div
    class="choiceGroupContainer"
  >
    <mock-styledchoicegroup
      islabelvisible="false"
      options="[object Object],[object Object],[object Object]"
      selectedkey="pass"
      styles="[object Object]"
    />
    <div
      class="secondaryControlsWrapper"
    >
      <mock-customizediconbutton
        arialabel="undo"
        iconprops="[object Object]"
      />
      <mock-customizediconbutton
        aria-label="add"
        iconprops="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to PASS: CustomizedIconButton props 1`] = `
{
  "ariaLabel": "undo",
  "iconProps": {
    "iconName": "undo",
  },
  "onClick": [Function],
}
`;

exports[`ChoiceGroupPassFail render: selectedKey is set to PASS: StyledChoiceGroup props 1`] = `
{
  "componentRef": [Function],
  "data-automation-id": undefined,
  "isLabelVisible": false,
  "onChange": [Function],
  "options": [
    {
      "ariaLabel": "Pass",
      "key": "pass",
      "onRenderLabel": [Function],
      "styles": {
        "field": undefined,
        "root": "radioButtonOption",
      },
      "text": "Pass",
    },
    {
      "ariaLabel": "Fail",
      "key": "fail",
      "onRenderLabel": [Function],
      "styles": {
        "field": undefined,
        "root": "radioButtonOption",
      },
      "text": "Fail",
    },
    {
      "ariaLabel": "unknown",
      "key": "unknown",
      "onRenderLabel": [Function],
      "styles": {
        "field": undefined,
        "root": "radioButtonOption",
      },
      "text": "unknown",
    },
  ],
  "selectedKey": "pass",
  "styles": {
    "flexContainer": "radioButtonGroup",
  },
}
`;
